--- a/circle.yml
+++ b/circle.yml
@@ -33,9 +33,7 @@ deployment:
       #- docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       #- docker build -f docker/Dockerfile -t bespoken/encoder:$CIRCLE_PROD .
       #- docker push bespoken/bst:$CIRCLE_PROD
-      - cd rancher-master/
-      - ls -la
-      - rancher-compose -p encoder_prod up -d -u -c -p
+      - rancher-compose -p encoder_prod --f rancher-master/docker-compose.yml -r rancher-master/rancher-compose.yml up -d -u -c -p
 
   release:
     tag: /release-.*/
@@ -44,6 +42,4 @@ deployment:
       #- docker build -f docker/Dockerfile -t bespoken/encoder:$CIRCLE_BUILD_NUM .
       #- docker push bespoken/bst:$CIRCLE_BUILD_NUM
       #- docker push bespoken/bst:$CIRCLE_BUILD_NUM
-      - cd rancher-tag/
-      - ls -la      
-      - rancher-compose -p encoder_$CIRCLE_BUILD_NUM up -d -u -c -p
+      - rancher-compose -p encoder_$CIRCLE_BUILD_NUM --f rancher-tag/docker-compose.yml -r rancher-tag/rancher-compose.yml up -d -u -c -p
