--- a/circle.yml
+++ b/circle.yml
@@ -20,7 +20,9 @@ dependencies:
 #  branches:
 #    only:
 #      - master
-
+test:
+  override:
+    - rancher-compose  -v
 deployment:
   #codecov:
   #  branch: master
