--- a/circle.yml
+++ b/circle.yml
@@ -29,13 +29,13 @@ deployment:
   #  commands:
   #    - npm run codecov
 
-  encoder-prod:
-    branch: master
-    commands:
+  #encoder-prod:
+  #  branch: master
+  #  commands:
       #- docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       #- docker build -f docker/Dockerfile -t bespoken/encoder:$CIRCLE_PROD .
       #- docker push bespoken/bst:$CIRCLE_PROD
-      - rancher-compose -p encoder_prod --f rancher-master/docker-compose.yml -r rancher-master/rancher-compose.yml up -d -u -c -p
+  #    - rancher-compose -p encoder_prod --f rancher-master/docker-compose.yml -r rancher-master/rancher-compose.yml up -d -u -c -p
 
   encoder-dev:
     tag: /release-.*/
