--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,4 @@
 machine:
-  #node:
-  #  version: 6.9.2
-  services:
-    - docker
 
 dependencies:
   pre:
@@ -20,16 +16,9 @@ deployment:
   encoder-prod:
     branch: master
     commands:
-      #- docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      #- docker build -f docker/Dockerfile -t bespoken/encoder:$CIRCLE_BUILD_NUM .
-      #- docker push bespoken/bst:$CIRCLE_BUILD_NUM
-      - rancher-compose -p encoder_prod --f rancher-master/docker-compose.yml -r rancher-master/rancher-compose.yml up -d -u -c -p
+      - rancher-compose -p encoder_prod --f rancher-master/docker-compose.yml -r rancher-master/rancher-compose.yml -e Encoder up -d -u -c -p
 
   encoder-dev:
     tag: /release-.*/
     commands:
-      #- docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      #- docker build -f docker/Dockerfile -t bespoken/encoder:$CIRCLE_BUILD_NUM .
-      #- docker push bespoken/bst:$CIRCLE_BUILD_NUM
-      #- docker push bespoken/bst:$CIRCLE_BUILD_NUM
-      - rancher-compose -p encoder_$CIRCLE_BUILD_NUM --f rancher-tag/docker-compose.yml -r rancher-tag/rancher-compose.yml up -d -u -c -p
+      - rancher-compose -p encoder_$CIRCLE_BUILD_NUM --f rancher-tag/docker-compose.yml -r rancher-tag/rancher-compose.yml -e Encoder up -d -u -c
