test new deplyment

--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,9 @@
 machine:
+  node:
+    version: 6.9.2
   services:
     - docker
+
 dependencies:
   pre:
     - wget https://github.com/rancher/rancher-compose/releases/download/v$RANCHER_VERSION_NUM/rancher-compose-linux-amd64-v$RANCHER_VERSION_NUM.tar.gz
@@ -9,18 +12,22 @@ dependencies:
     - sudo mv rancher-compose-v$RANCHER_VERSION_NUM/rancher-compose /usr/local/bin/rancher-compose
     - sudo chmod +x /usr/local/bin/rancher-compose
     - rm -r rancher-compose-v$RANCHER_VERSION_NUM
-test:
-  override:
-    - rancher-compose  -v
-deployment:
-  
-  encoder-prod:
-    branch: master
-    commands:
-      #If we need deply in different enviroment need add:  -e <Enviroment name>
-      - rancher-compose -p encoder_prod --f rancher-master/docker-compose.yml -r rancher-master/rancher-compose.yml up -d -u -c -p
+    - sudo add-apt-repository --yes ppa:kirillshkrogalev/ffmpeg-next
+    - sudo apt-get update
+    - sudo apt-get install ffmpeg
 
-  encoder-dev:
+general:
+  branches:
+    only:
+      - master
+
+deployment:
+  BstEncoder:
     tag: /BstEncoder-.*/
     commands:
-      - rancher-compose -p encoder_$CIRCLE_TAG --f rancher-tag/docker-compose.yml -r rancher-tag/rancher-compose.yml up -d -u -c
+      - rancher-compose -p encoder --f rancher-prod/docker-compose.yml -r rancher-prod/rancher-compose.yml up -d -u -c -p
+
+  DevEncoder:
+    tag: /DevEncoder-.*/
+    commands:
+      - rancher-compose -p encoderDev_$CIRCLE_TAG --f rancher-dev/docker-compose.yml -r rancher-dev/rancher-compose.yml up -d -u -c -p
