--- a/circle.yml
+++ b/circle.yml
@@ -12,14 +12,11 @@ dependencies:
     - sudo mv rancher-compose-v$RANCHER_VERSION_NUM/rancher-compose /usr/local/bin/rancher-compose
     - sudo chmod +x /usr/local/bin/rancher-compose
     - rm -r rancher-compose-v$RANCHER_VERSION_NUM
-    - sudo add-apt-repository --yes ppa:kirillshkrogalev/ffmpeg-next
-    - sudo apt-get update
-    - sudo apt-get install ffmpeg
+test:
+  override:
+- rancher-compose  -v
 
 general:
-  branches:
-    only:
-      - master
 
 deployment:
   BstEncoder:
